<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="end">

    <LinearLayout
        android:id="@+id/home_item_ll_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|start"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/home_item_ll_btns">

        <TextView
            android:id="@+id/home_item_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_name"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/home_item_ll_btns"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:gravity="end">

        <Button
            android:id="@+id/home_item_btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"/>

        <Button
            android:id="@+id/home_item_btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>

    </LinearLayout>

</RelativeLayout>