<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".activity.todo.UpdateActivity">

    <TextView
        android:id="@+id/update_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_todo"
        android:textSize="28sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/update_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/name"
        android:layout_below="@+id/update_tv_title"
        />

    <EditText
        android:id="@+id/update_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_form"
        android:layout_below="@+id/update_tv_name"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/update_tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_below="@id/update_et_name"
        android:text="@string/description"/>

    <EditText
        android:id="@+id/update_et_description"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:maxLines="8"
        android:lines="8"
        android:background="@drawable/bg_form"
        android:scrollbars="vertical"
        android:layout_below="@+id/update_tv_description"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/update_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_button"
        android:layout_below="@id/update_et_description"
        android:text="@string/save"/>

</RelativeLayout>